--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 </head>
 <body>
   <div class="container">
-    <div class="emoji">🤡</div>
+    <div class="emoji">🥶</div>
     <img src="https://media2.giphy.com/media/kIRVh493Re9o4WDlf9/giphy.gif" alt="Cartoon fish on a hook illustrating 'phishing'">
     <h1>GOTCHA! YOU HAVE BEEN PHISHED!</h1>
-    <h2>⚠️🐟 Don't click on any random suspicious-looking URLs!</h2>
+    <h2>⚠️🧐 Don't click on any random suspicious-looking URLs!</h2>
     <p>This link was part of a phishing awareness training. Always verify links and email senders before clicking!</p>
     <a href="https://www.consumer.ftc.gov/articles/how-recognize-and-avoid-phishing-scams" target="_blank" class="button">Learn More About Phishing</a>
   </div>
